[tool.poetry]
name = "rl-gym-tutorial"
version = "0.1.0"
description = ""
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
stable-baselines3 = "^2.2.1"
gymnasium = "^0.29.1"
tensorboard = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
